crates/rlf-macros/tests/fail/from_without_params.rs
use rlf::rlf;

rlf! {
    thing = :from($s) "<b>{$s}</b>";
}

fn main() {}
